syntax = "proto3";

package notifications;

option java_package = "com.codenjoy.dojo";
option java_multiple_files = true;

message ByIdRequest{
  string id = 1;
}

message ByUsernameRequest{
  string username = 1;
}

message UserDetailsResponse{
  string id = 1;
  string email = 2;
}

service UserDetailsService{
  rpc getUserDetailsById(ByIdRequest) returns (UserDetailsResponse);
  rpc getUserDetailsByUsername(ByUsernameRequest) returns (UserDetailsResponse);
}